move all sensor data calculation to a service and use broadcastreceiver to communicate